examples/negative/parse_errors/L1/reserved_if.ob
MODULE Reserved;

VAR IF: INTEGER;

END Reserved.
